Scrollbar issue fixed--minor bug-1.

--- a/components/project-navbar/CodeExplorer.module.scss
+++ b/components/project-navbar/CodeExplorer.module.scss
@@ -17,7 +17,7 @@
     }
 
     &>span {
-        padding: .6rem 1.35rem .6rem 1.7rem;
+        padding: .6rem 1.9rem .6rem 1.7rem;
         font-family: Gt-Whelshime-Light, sans-serif;
         font-size: 1.4rem;
         font-weight: 400;
@@ -43,10 +43,10 @@
         &::after {
             content: "";
             top: 0;
-            left: calc(50% + .45rem);
+            left: 50%;
             background-color: transparent;
             position: absolute;
-            width: calc(100% - .9rem);
+            width: calc(100% - 1.8rem);
             transform: translateX(-50%);
             height: 100%;
             z-index: -1;
