--- a/components/project-navbar/ProjectNavbar.module.scss
+++ b/components/project-navbar/ProjectNavbar.module.scss
@@ -158,22 +158,22 @@
         }
 
         &::-webkit-scrollbar {
-            width: .9rem;
-            height: .9rem;
+            width: 0rem;
+            height: 0rem;
             transition: all 2s;
             opacity: 0;
         }
 
         &:hover {
             &::-webkit-scrollbar {
-                width: .9rem;
-                height: .9rem;
+                width: 0rem;
+                height: 0rem;
                 opacity: .3;
             }
 
             &::-webkit-scrollbar-track {
-                // background-color: rgba(222, 226, 230,.4);
                 background: transparent;
+                background-color: rgba(222, 226, 230, .7);
                 display: block;
                 width: .9rem;
                 height: .9rem;
